--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,27 @@
-document.folders.root=/users/crickethcms/documents
+document.folders.root=documents
 document.folders.excluded=/.git;/attic
 document.syntax=github
 document.extension.markdown=.md
 document.extension.html=.html
 %dev.document.folders.root=./doc
+
+## DOCKER
+quarkus.container-image.builder=jib
+quarkus.container-image.group=gskorupa
+quarkus.container-image.name=crickethcms
+quarkus.container-image.tag=latest
+quarkus.container-image.build=true
+quarkus.container-image.push=true
+
+# HTTP
+quarkus.http.proxy.proxy-address-forwarding=true
+quarkus.http.proxy.allow-forwarded=true
+quarkus.http.proxy.allow-x-forwarded=true
+quarkus.http.proxy.enable-forwarded-host=true
+quarkus.http.proxy.enable-forwarded-prefix=true
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.access-control-allow-credentials=true
+
+# TODO: scheduler
