--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,16 @@ document.extension.markdown=.md
 document.extension.html=.html
 %dev.document.folders.root=./doc
 
+image.group.default=
+image.release=%release%
+
+
 ## DOCKER
 quarkus.container-image.builder=jib
-quarkus.container-image.group=gskorupa
-quarkus.container-image.name=crickethcms
-quarkus.container-image.tag=latest
-quarkus.container-image.build=true
-quarkus.container-image.push=true
+quarkus.container-image.group=${IMAGE_GROUP:${image.group.default}}
+quarkus.container-image.name=${HCMS_IMAGE_NAME:crickethcms}
+quarkus.container-image.tag=${HCMS_IMAGE_TAG:${image.release}}
+quarkus.container-image.push=false
 
 # HTTP
 quarkus.http.proxy.proxy-address-forwarding=true
