work in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ document.syntax=github
 document.extension.markdown=.md
 document.extension.html=.html
 %dev.document.folders.root=./doc
+document.watcher.active=true
+document.watcher.file=version.txt
 
 image.group.default=
 image.release=%release%
