updated document loader

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-document.folders.root=documents
-document.folders.excluded=/.git;/attic
-document.syntax=github
-document.extension.markdown=.md
-document.extension.html=.html
+%prod.document.folders.root=${FOLDERS_ROOT:documents}
+%prod.document.folders.excluded=${FOLDERS_EXCLUDED:/.git;/attic}
+%prod.document.syntax=${SYNTAX:github}
+%prod.document.extension.markdown=${MARKDOWN_EXTENSION:.md}
+%prod.document.extension.html=${HTML_EXTENSION:.html}
+%prod.document.watcher.active=true
+%prod.document.watcher.file=${FILE_TO_WATCH:version.txt}
 %dev.document.folders.root=./doc
-document.watcher.active=true
-document.watcher.file=version.txt
+%dev.document.folders.excluded=/.git;/attic
+%dev.document.syntax=github
+%dev.document.extension.markdown=.md
+%dev.document.extension.html=.html
+%dev.document.watcher.active=true
+%dev.document.watcher.file=version.txt
 
 image.group.default=
 image.release=%release%
