--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@
 %dev.document.watcher.active=true
 %dev.document.watcher.file=version.txt
 
+app.token=${APP_TOKEN:app-token}
+
+
 image.group.default=
 image.release=%release%
 
