--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ image.release=%release%
 
 ## DOCKER
 quarkus.container-image.builder=jib
-quarkus.container-image.group=${IMAGE_GROUP:${image.group.default}}
+quarkus.container-image.group=${HSMS_IMAGE_GROUP:${image.group.default}}
 quarkus.container-image.name=${HCMS_IMAGE_NAME:crickethcms}
 quarkus.container-image.tag=${HCMS_IMAGE_TAG:${image.release}}
 quarkus.container-image.additional-tags=latest
