--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,10 @@ quarkus.http.cors.origins=*
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.access-control-allow-credentials=true
 
+# SSO
+auth.sso.enabled=true
+auth.sso.realm.param=${SSO_REALM_PARAM:organization}
+auth.sso.realm=${SSO_REALM:cms}
+auth.sso.auth-server-url=${SSO_AUTH_SERVER_URL:http://localhost:8180/auth}
+
 # TODO: scheduler
