--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@
 %dev.document.watcher.file=version.txt
 
 app.token=${APP_TOKEN:app-token}
+github.token=${GITHUB_TOKEN:mytoken}
+github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
 
 
 image.group.default=
