--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,4 +48,7 @@ auth.sso.realm.param=${SSO_REALM_PARAM:organization}
 auth.sso.realm=${SSO_REALM:cms}
 auth.sso.auth-server-url=${SSO_AUTH_SERVER_URL:http://localhost:8180/auth}
 
+# Open API
+quarkus.swagger-ui.always-include=true
+
 # TODO: scheduler
