--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.cricketmsf.cms</groupId>
-  <artifactId>cricketcms</artifactId>
-  <version>0.12.0</version>
+  <artifactId>cricket-hcms</artifactId>
+  <version>0.13.0</version>
   <properties>
     <compiler-plugin.version>3.11.0</compiler-plugin.version>
     <maven.compiler.release>17</maven.compiler.release>
