--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+## CONFIGURATION
+get.document.authorization.required=false
 %prod.document.folders.root=${FOLDERS_ROOT:documents}
 %prod.document.folders.excluded=${FOLDERS_EXCLUDED:/.git;/attic}
 %prod.document.syntax=${SYNTAX:github}
@@ -18,15 +20,12 @@ app.token=${APP_TOKEN:app-token}
 github.token=${GITHUB_TOKEN:mytoken}
 github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
 
-
+## DOCKER
 image.group.default=
 image.release=%release%
-
-
-## DOCKER
 quarkus.container-image.builder=jib
 quarkus.container-image.group=${HSMS_IMAGE_GROUP:${image.group.default}}
-quarkus.container-image.name=${HCMS_IMAGE_NAME:crickethcms}
+quarkus.container-image.name=${HCMS_IMAGE_NAME:cricket-hcms}
 quarkus.container-image.tag=${HCMS_IMAGE_TAG:${image.release}}
 quarkus.container-image.additional-tags=latest
 quarkus.container-image.push=false
@@ -50,5 +49,9 @@ auth.sso.auth-server-url=${SSO_AUTH_SERVER_URL:http://localhost:8180/auth}
 
 # Open API
 quarkus.swagger-ui.always-include=true
+quarkus.smallrye-openapi.security-scheme=api-key
+quarkus.smallrye-openapi.api-key-parameter-in=header
+quarkus.smallrye-openapi.api-key-parameter-name=X-app-token
+#quarkus.smallrye-openapi.additional-docs-directory=docs
 
 # TODO: scheduler
