--- a/dev.cfg
+++ b/dev.cfg
@@ -1,8 +1,8 @@
 # Cricket HCMS configuration fire for build script
-# This file is used by build-image.sh script to build and push docker imag
+# This file is used by build-image.sh script to build and push docker image
 
 # versions
-versionHcms=0.12.2
+versionHcms=0.13.5
 # names
 imageNameHcms=cricket-hcms
 
