--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -7,7 +7,7 @@ global
 
 defaults
     mode http
-    option forwarded
+#    option forwarded
     timeout connect 5000ms
     timeout client 50000ms
     timeout server 50000ms
@@ -29,11 +29,12 @@ frontend all
     acl host_webmain1 hdr(host) -i test.localhost
     acl host_hcms1 hdr(host) -i hcms.localhost
     acl acl_api path_beg /api
+    acl acl_api_hcms path_beg /api/file
 
     use_backend backend_hcms if acl_api
     use_backend backend_website if host_webmain1
     use_backend backend_hcms if host_hcms1
-    
+    use_backend backend_hcms if acl_api_hcms
 #    default_backend backend_website
 
 
