--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,8 @@ github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
 ## DOCKER
 image.group.default=
 image.release=%release%
-quarkus.container-image.builder=jib
+#quarkus.native.container-build=true
+#quarkus.container-image.builder=jib
 quarkus.container-image.group=${HSMS_IMAGE_GROUP:${image.group.default}}
 quarkus.container-image.name=${HCMS_IMAGE_NAME:cricket-hcms}
 quarkus.container-image.tag=${HCMS_IMAGE_TAG:${image.release}}
