--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,8 +6,11 @@ services:
     environment:
       FOLDERS_ROOT: ./documents
       FILE_TO_WATCH: version.txt
+      HCMS_SERVICE_URL: http://localhost:8081
     expose:
       - "8080"
+    ports:
+      - "8081:8080"
     volumes:
       - ./documents:/home/jboss/documents
     networks:
@@ -17,15 +20,8 @@ services:
     image: cricket-website:latest
     depends_on:
       - hcms
-    networks:
-      - hcms
-  
-  gateway:
-    image: haproxy:2.4
-    volumes:
-      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     ports:
-      - 80:80
+      - "8080:3000"
     networks:
       - hcms
 
