--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ get.document.authorization.required=false
 app.token=${APP_TOKEN:app-token}
 github.token=${GITHUB_TOKEN:mytoken}
 github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
+assets.folder.name=${ASSETS_FOLDER:assets}
+hcms.sevice.url=${HCMS_SERVICE_URL:none}
 
 ## DOCKER
 image.group.default=
