--- a/dev.cfg
+++ b/dev.cfg
@@ -1,5 +1,7 @@
-# Cricket HCMS configuration fire for build script
-# This file is used by build-image.sh script to build and push docker image
+# Cricket HCMS configuration file for build script
+# This file is used by:
+# - build-image.sh script to build and push docker image
+# - docker_compose.yml file to set up docker-compose environment
 
 # versions
 versionHcms=0.13.5
