--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 ## CONFIGURATION
 get.document.authorization.required=false
+
+%prod.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %prod.document.folders.root=${FOLDERS_ROOT:documents}
+%prod.document.folders.sites=${FOLDERS_SITES:}
+%prod.document.folders.assets=${FOLDERS_ASSETS:assets}
 %prod.document.folders.excluded=${FOLDERS_EXCLUDED:/.git;/attic}
 %prod.document.syntax=${SYNTAX:github}
 %prod.document.extension.markdown=${MARKDOWN_EXTENSION:.md}
@@ -8,7 +12,10 @@ get.document.authorization.required=false
 %prod.document.watcher.active=true
 %prod.document.watcher.file=${FILE_TO_WATCH:version.txt}
 
+%dev.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %dev.document.folders.root=./doc
+%dev.document.folders.sites=${FOLDERS_SITES:}
+%dev.document.folders.assets=${FOLDERS_ASSETS:assets}
 %dev.document.folders.excluded=/.git;/attic
 %dev.document.syntax=github
 %dev.document.extension.markdown=.md
@@ -16,11 +23,11 @@ get.document.authorization.required=false
 %dev.document.watcher.active=true
 %dev.document.watcher.file=version.txt
 
+# not used yet
 app.token=${APP_TOKEN:app-token}
 github.token=${GITHUB_TOKEN:mytoken}
 github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
-assets.folder.name=${ASSETS_FOLDER:assets}
-hcms.sevice.url=${HCMS_SERVICE_URL:none}
+
 
 ## DOCKER
 image.group.default=
@@ -45,10 +52,10 @@ quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.access-control-allow-credentials=true
 
 # SSO
-auth.sso.enabled=true
-auth.sso.realm.param=${SSO_REALM_PARAM:organization}
-auth.sso.realm=${SSO_REALM:cms}
-auth.sso.auth-server-url=${SSO_AUTH_SERVER_URL:http://localhost:8180/auth}
+#auth.sso.enabled=true
+#auth.sso.realm.param=${SSO_REALM_PARAM:organization}
+#auth.sso.realm=${SSO_REALM:cms}
+#auth.sso.auth-server-url=${SSO_AUTH_SERVER_URL:http://localhost:8180/auth}
 
 # Open API
 quarkus.swagger-ui.always-include=true
