--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 ## CONFIGURATION
 get.document.authorization.required=false
-
+%prod.hcms.database.type=${DATABASE_TYPE:map}
 %prod.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %prod.document.folders.root=${FOLDERS_ROOT:documents}
-%prod.document.folders.sites=${FOLDERS_SITES:}
+%prod.document.folders.sites=${FOLDERS_SITES:none}
 %prod.document.folders.assets=${FOLDERS_ASSETS:assets}
 %prod.document.folders.excluded=${FOLDERS_EXCLUDED:/.git;/attic}
+%prod.document.folders.indexes=${FOLDERS_INDEXES:index.md}
 %prod.document.syntax=${SYNTAX:github}
 %prod.document.extension.markdown=${MARKDOWN_EXTENSION:.md}
 %prod.document.extension.html=${HTML_EXTENSION:.html}
 %prod.document.watcher.active=true
 %prod.document.watcher.file=${FILE_TO_WATCH:version.txt}
 
+%dev.hcms.database.type=${DATABASE_TYPE:map}
 %dev.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %dev.document.folders.root=./doc
 %dev.document.folders.sites=${FOLDERS_SITES:}
@@ -50,6 +52,12 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.access-control-allow-credentials=true
+
+# DATABASE
+quarkus.datasource.db-kind=h2
+quarkus.datasource.username=sa
+quarkus.datasource.jdbc.url=jdbc:h2:mem:hcms
+quarkus.datasource.jdbc.max-size=13
 
 # SSO
 #auth.sso.enabled=true
