--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## CONFIGURATION
 get.document.authorization.required=false
-%prod.hcms.database.type=${DATABASE_TYPE:map}
+%prod.hcms.database.type=${DATABASE_TYPE:h2}
 %prod.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %prod.document.folders.root=${FOLDERS_ROOT:documents}
 %prod.document.folders.sites=${FOLDERS_SITES:none}
@@ -56,7 +56,8 @@ quarkus.http.cors.access-control-allow-credentials=true
 # DATABASE
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
-quarkus.datasource.jdbc.url=jdbc:h2:mem:hcms
+#quarkus.datasource.jdbc.url=jdbc:h2:mem:hcms
+quarkus.datasource.jdbc.url=jdbc:h2:~/hcms
 quarkus.datasource.jdbc.max-size=13
 
 # SSO
