--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,13 +7,13 @@ services:
     hostname: hcms
     environment:
       FOLDERS_ROOT: documents
-      FILE_TO_WATCH: version.txt;version.txt
+      FILE_TO_WATCH: version.txt;demo-version.txt
       HCMS_SERVICE_URL: http://localhost:8082
       FOLDERS_ASSETS: assets;assets
       FOLDERS_SITES: documentation;demo
       FOLDERS_INDEXES: index.md;index.md
-      FOLDERS_EXCLUDED: .git,excluded_folder;none
-      DATABASE_TYPE: map
+      FOLDERS_EXCLUDED: excluded_folder;none
+      DATABASE_TYPE: h2
     expose:
       - "8080"
     ports:
