--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,6 +52,7 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.access-log.enabled=true
 
 # DATABASE
 quarkus.datasource.db-kind=h2
