--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 ## CONFIGURATION
 get.document.authorization.required=false
+
 %prod.hcms.database.type=${DATABASE_TYPE:h2}
+%prod.loader.type=${LOADER_TYPE:filesystem}
 %prod.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %prod.document.folders.root=${FOLDERS_ROOT:documents}
 %prod.document.folders.sites=${FOLDERS_SITES:none}
@@ -14,11 +16,13 @@ get.document.authorization.required=false
 %prod.document.watcher.file=${FILE_TO_WATCH:version.txt}
 
 %dev.hcms.database.type=${DATABASE_TYPE:map}
+%dev.loader.type=${LOADER_TYPE:dummy}
 %dev.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %dev.document.folders.root=./doc
 %dev.document.folders.sites=${FOLDERS_SITES:}
 %dev.document.folders.assets=${FOLDERS_ASSETS:assets}
 %dev.document.folders.excluded=/.git;/attic
+%dev.document.folders.indexes=${FOLDERS_INDEXES:index.md}
 %dev.document.syntax=github
 %dev.document.extension.markdown=.md
 %dev.document.extension.html=.html
