--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ get.document.authorization.required=false
 %dev.loader.type=${LOADER_TYPE:dummy}
 %dev.hcms.sevice.url=${HCMS_SERVICE_URL:none}
 %dev.document.folders.root=./doc
-%dev.document.folders.sites=${FOLDERS_SITES:}
+%dev.document.folders.sites=${FOLDERS_SITES:none}
 %dev.document.folders.assets=${FOLDERS_ASSETS:assets}
 %dev.document.folders.excluded=/.git;/attic
 %dev.document.folders.indexes=${FOLDERS_INDEXES:index.md}
@@ -29,11 +29,27 @@ get.document.authorization.required=false
 %dev.document.watcher.active=true
 %dev.document.watcher.file=version.txt
 
+%test.hcms.database.type=${DATABASE_TYPE:h2}
+%test.loader.type=${LOADER_TYPE:dummy}
+%test.hcms.sevice.url=${HCMS_SERVICE_URL:none}
+%test.document.folders.root=./doc
+%test.document.folders.sites=${FOLDERS_SITES:none}
+%test.document.folders.assets=${FOLDERS_ASSETS:assets}
+%test.document.folders.excluded=/.git;/attic
+%test.document.folders.indexes=${FOLDERS_INDEXES:index.md}
+%test.document.syntax=github
+%test.document.extension.markdown=.md
+%test.document.extension.html=.html
+%test.document.watcher.active=true
+%test.document.watcher.file=version.txt
+
 # not used yet
 app.token=${APP_TOKEN:app-token}
 github.token=${GITHUB_TOKEN:mytoken}
 github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
 
+%test.app.token=app-token
+%test.get.document.authorization.required=true
 
 ## DOCKER
 image.group.default=
