--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,30 @@
 ## CONFIGURATION
 get.document.authorization.required=false
 
-%prod.hcms.database.type=${DATABASE_TYPE:h2}
-%prod.loader.type=${LOADER_TYPE:filesystem}
-%prod.hcms.sevice.url=${HCMS_SERVICE_URL:none}
-%prod.document.folders.root=${FOLDERS_ROOT:documents}
-%prod.document.folders.sites=${FOLDERS_SITES:none}
-%prod.document.folders.assets=${FOLDERS_ASSETS:assets}
-%prod.document.folders.excluded=${FOLDERS_EXCLUDED:/.git;/attic}
-%prod.document.folders.indexes=${FOLDERS_INDEXES:index.md}
-%prod.document.syntax=${SYNTAX:github}
-%prod.document.extension.markdown=${MARKDOWN_EXTENSION:.md}
-%prod.document.extension.html=${HTML_EXTENSION:.html}
-%prod.document.watcher.active=true
-%prod.document.watcher.file=${FILE_TO_WATCH:version.txt}
+hcms.database.type=${DATABASE_TYPE:h2}
+hcms.loader.type=${LOADER_TYPE:filesystem}
+hcms.watcher.type=${WATCHER_TYPE:filesystem}   
+hcms.sevice.url=${HCMS_SERVICE_URL:none}
+document.folders.root=${FOLDERS_ROOT:documents}
+document.folders.sites=${FOLDERS_SITES:none}
+document.folders.assets=${FOLDERS_ASSETS:assets}
+document.folders.excluded=${FOLDERS_EXCLUDED:/.git;/attic}
+document.folders.indexes=${FOLDERS_INDEXES:index.md}
+document.syntax=${SYNTAX:github}
+document.extension.markdown=${MARKDOWN_EXTENSION:.md}
+document.extension.html=${HTML_EXTENSION:.html}
+document.watcher.active=true
+document.watcher.file=${FILE_TO_WATCH:version.txt}
 
-%dev.hcms.database.type=${DATABASE_TYPE:map}
-%dev.loader.type=${LOADER_TYPE:dummy}
-%dev.hcms.sevice.url=${HCMS_SERVICE_URL:none}
-%dev.document.folders.root=./doc
-%dev.document.folders.sites=${FOLDERS_SITES:none}
-%dev.document.folders.assets=${FOLDERS_ASSETS:assets}
-%dev.document.folders.excluded=/.git;/attic
-%dev.document.folders.indexes=${FOLDERS_INDEXES:index.md}
-%dev.document.syntax=github
-%dev.document.extension.markdown=.md
-%dev.document.extension.html=.html
-%dev.document.watcher.active=true
-%dev.document.watcher.file=version.txt
-
-%test.hcms.database.type=${DATABASE_TYPE:h2}
-%test.loader.type=${LOADER_TYPE:dummy}
-%test.hcms.sevice.url=${HCMS_SERVICE_URL:none}
+%test.hcms.database.type=h2
+%test.hcms.loader.type=dummy
+%test.hcms.watcher.type=dummy
+%test.hcms.sevice.url=none
 %test.document.folders.root=./doc
-%test.document.folders.sites=${FOLDERS_SITES:none}
-%test.document.folders.assets=${FOLDERS_ASSETS:assets}
-%test.document.folders.excluded=/.git;/attic
-%test.document.folders.indexes=${FOLDERS_INDEXES:index.md}
+%test.document.folders.sites=none
+%test.document.folders.assets=assets
+%test.document.folders.excluded=/.git,/attic
+%test.document.folders.indexes=index.md
 %test.document.syntax=github
 %test.document.extension.markdown=.md
 %test.document.extension.html=.html
