--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ document.extension.html=${HTML_EXTENSION:.html}
 document.watcher.active=true
 document.watcher.file=${FILE_TO_WATCH:version.txt}
 
-%test.hcms.database.type=h2
+%test.hcms.database.type=dummy
 %test.hcms.loader.type=dummy
 %test.hcms.watcher.type=dummy
 %test.hcms.sevice.url=none
