--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ hcms.database.type=${DATABASE_TYPE:h2}
 hcms.loader.type=${LOADER_TYPE:filesystem}
 hcms.watcher.type=${WATCHER_TYPE:filesystem}   
 hcms.sevice.url=${HCMS_SERVICE_URL:none}
+hcms.localization.model=${HCMS_LOCALIZATION_MODEL:path_prefix}
+hcms.translator.type=${HCMS_TRANSLATOR_TYPE:dummy}
+hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:pl}
+hcms.repository.languages=${HCMS_REPOSITORY_LANGUAGES:pl,en,de}
 document.folders.root=${FOLDERS_ROOT:documents}
 document.folders.sites=${FOLDERS_SITES:none}
 document.folders.assets=${FOLDERS_ASSETS:assets}
@@ -20,6 +24,10 @@ document.watcher.file=${FILE_TO_WATCH:version.txt}
 %test.hcms.loader.type=dummy
 %test.hcms.watcher.type=dummy
 %test.hcms.sevice.url=none
+%test.hcms.localization.model=${HCMS_LOCALIZATION_MODEL:path_prefix}
+%test.hcms.localization.class=${HCMS_LOCALIZATION_CLASS}
+%test.hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:pl}
+%test.hcms.repository.languages=${HCMS_REPOSITORY_LANGUAGES:pl,en,de}
 %test.document.folders.root=./doc
 %test.document.folders.sites=none
 %test.document.folders.assets=assets
