--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,18 @@ services:
     environment:
       FOLDERS_ROOT: documents
       FILE_TO_WATCH: version.txt;version.txt
-      HCMS_SERVICE_URL: http://localhost:8082
+      HCMS_SERVICE_URL: http://localhost:8082;http://localhost:8082
       FOLDERS_ASSETS: assets;assets
       FOLDERS_SITES: documentation;demo
       FOLDERS_INDEXES: index.md;index.md
       FOLDERS_EXCLUDED: .git,excluded_folder;none
-      DATABASE_TYPE: h2
+      #DATABASE_TYPE: h2
+      #LOADER_TYPE: filesystem
+      #WATCHER_TYPE: filesystem
+      HCMS_REPOSITORY_LANGUAGE_MAIN: en
+      HCMS_REPOSITORY_LANGUAGES: en,pl
+      HCMS_TRANSLATOR_TYPE: deepl
+      DEEPL_API_KEY_FILE: /run/secrets/deepl_api_key
     expose:
       - "8080"
     ports:
@@ -22,13 +28,15 @@ services:
       - $PWD:/home/jboss/documents
     networks:
       - hcms
+    secrets:
+       - deepl_api_key
   
   website:
     image: gskorupa/cricket-website:latest
     container_name: website
     hostname: website
     environment:
-      PUBLIC_HCMS_URL: http://hcms:8080/api/docs
+      PUBLIC_HCMS_URL: http://hcms:8080
       PUBLIC_HCMS_INDEX: index.md
       PUBLIC_HCMS_ROOT: documentation
     depends_on:
@@ -43,9 +51,10 @@ services:
     container_name: website2
     hostname: website2
     environment:
-      PUBLIC_HCMS_URL: http://hcms:8080/api/docs
+      PUBLIC_HCMS_URL: http://hcms:8080
       PUBLIC_HCMS_INDEX: index.md
       PUBLIC_HCMS_ROOT: demo
+      PUBLIC_HCMS_LANGUAGES: en,pl
     depends_on:
       - hcms
     ports:
@@ -56,3 +65,7 @@ services:
 networks:
   hcms:
     driver: bridge
+
+secrets:
+  deepl_api_key:
+    file: ~/.secrets/deepl_api_key.txt
