--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ hcms.translator.type=${HCMS_TRANSLATOR_TYPE:dummy}
 hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:pl}
 hcms.repository.languages=${HCMS_REPOSITORY_LANGUAGES:pl,en,de}
 deepl.api.key.file=${DEEPL_API_KEY_FILE:none}
+deepl.doc.metadata=${DEEPL_DOC_METADATA:title}
 document.folders.root=${FOLDERS_ROOT:documents}
 document.folders.sites=${FOLDERS_SITES:none}
 document.folders.assets=${FOLDERS_ASSETS:assets}
@@ -30,6 +31,7 @@ document.watcher.file=${FILE_TO_WATCH:version.txt}
 %test.hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:pl}
 %test.hcms.repository.languages=${HCMS_REPOSITORY_LANGUAGES:pl,en,de}
 %test.deepl.api.key.file=none
+%test.deepl.doc.metadata=none
 %test.document.folders.root=./doc
 %test.document.folders.sites=none
 %test.document.folders.assets=assets
