--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ hcms.database.type=${DATABASE_TYPE:h2}
 hcms.loader.type=${LOADER_TYPE:filesystem}
 hcms.watcher.type=${WATCHER_TYPE:filesystem}   
 hcms.sevice.url=${HCMS_SERVICE_URL:none}
+hcms.file.api=${HCMS_FILE_API:none}
 hcms.localization.model=${HCMS_LOCALIZATION_MODEL:path_prefix}
 hcms.translator.type=${HCMS_TRANSLATOR_TYPE:dummy}
 hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:pl}
