Refactor Docker Compose files to include AUTH_TOKEN environment variable. Alternative file API.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ document.extension.markdown=${MARKDOWN_EXTENSION:.md}
 document.extension.html=${HTML_EXTENSION:.html}
 document.watcher.active=true
 document.watcher.file=${FILE_TO_WATCH:version.txt}
+auth.token=${AUTH_TOKEN:app-token}
 
 %test.hcms.database.type=dummy
 %test.hcms.loader.type=dummy
@@ -43,9 +44,9 @@ document.watcher.file=${FILE_TO_WATCH:version.txt}
 %test.document.extension.html=.html
 %test.document.watcher.active=true
 %test.document.watcher.file=version.txt
+%test.auth.token=${AUTH_TOKEN:app-token}
 
 # not used yet
-app.token=${APP_TOKEN:app-token}
 github.token=${GITHUB_TOKEN:mytoken}
 github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
 
