--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       HCMS_REPOSITORY_LANGUAGE_MAIN: en
       HCMS_REPOSITORY_LANGUAGES: en,pl
       HCMS_TRANSLATOR_TYPE: deepl
+      AUTH_TOKEN: 123
       DEEPL_API_KEY_FILE: /run/secrets/deepl_api_key
     expose:
       - "8080"
