--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,24 +4,24 @@ get.document.authorization.required=false
 hcms.database.type=${DATABASE_TYPE:h2}
 hcms.loader.type=${LOADER_TYPE:filesystem}
 hcms.watcher.type=${WATCHER_TYPE:filesystem}   
-hcms.sevice.url=${HCMS_SERVICE_URL:none}
-hcms.file.api=${HCMS_FILE_API:none}
+hcms.sevice.url=${HCMS_SERVICE_URL:none;none}
+hcms.file.api=${HCMS_FILE_API:none;none}
 hcms.localization.model=${HCMS_LOCALIZATION_MODEL:path_prefix}
 hcms.translator.type=${HCMS_TRANSLATOR_TYPE:dummy}
-hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:pl}
+hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:en}
 hcms.repository.languages=${HCMS_REPOSITORY_LANGUAGES:pl,en,de}
 deepl.api.key.file=${DEEPL_API_KEY_FILE:none}
 deepl.doc.metadata=${DEEPL_DOC_METADATA:title}
 document.folders.root=${FOLDERS_ROOT:documents}
-document.folders.sites=${FOLDERS_SITES:none}
-document.folders.assets=${FOLDERS_ASSETS:assets}
-document.folders.excluded=${FOLDERS_EXCLUDED:/.git;/attic}
-document.folders.indexes=${FOLDERS_INDEXES:index.md}
+document.folders.sites=${FOLDERS_SITES:documentation;demo}
+document.folders.assets=${FOLDERS_ASSETS:assets;assets}
+document.folders.excluded=${FOLDERS_EXCLUDED:excluded_folder;none}
+document.folders.indexes=${FOLDERS_INDEXES:index.md;index.md}
 document.syntax=${SYNTAX:github}
 document.extension.markdown=${MARKDOWN_EXTENSION:.md}
 document.extension.html=${HTML_EXTENSION:.html}
 document.watcher.active=true
-document.watcher.file=${FILE_TO_WATCH:version.txt}
+document.watcher.file=${FILE_TO_WATCH:version.txt;demo_version.txt}
 auth.token=${AUTH_TOKEN:app-token}
 
 %test.hcms.database.type=dummy
@@ -79,7 +79,7 @@ quarkus.http.access-log.enabled=true
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 #quarkus.datasource.jdbc.url=jdbc:h2:mem:hcms
-quarkus.datasource.jdbc.url=jdbc:h2:~/hcms
+quarkus.datasource.jdbc.url=jdbc:h2:${H2_HOME:~/database/hcms}
 quarkus.datasource.jdbc.max-size=13
 
 # SSO
