--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,4 +95,7 @@ quarkus.smallrye-openapi.api-key-parameter-in=header
 quarkus.smallrye-openapi.api-key-parameter-name=X-app-token
 #quarkus.smallrye-openapi.additional-docs-directory=docs
 
+## REST Clients
+pl.experiot.hcms.adapters.driven.auth.SignomixAuthClient/mp-rest/url=${AUTH_URL:http://signomix-auth:8080}
+
 # TODO: scheduler
