Add TokenCache and DocumentAccessLogic for user token management and document organization handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ document.extension.html=${HTML_EXTENSION:.html}
 document.watcher.active=true
 document.watcher.file=${FILE_TO_WATCH:version.txt;demo_version.txt}
 auth.token=${AUTH_TOKEN:app-token}
+organization.default.id=${ORGANIZATION_DEFAULT_ID:-1}
 
 %test.hcms.database.type=dummy
 %test.hcms.loader.type=dummy
