Refactor DocumentApi and DocumentAccessLogic for improved token handling and document path construction; update application properties for test configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,7 +51,7 @@ organization.default.id=${ORGANIZATION_DEFAULT_ID:-1}
 github.token=${GITHUB_TOKEN:mytoken}
 github.repository=${GITHUB_REPOSITORY:github.com/myaccount/myrepo.git}
 
-%test.get.document.authorization.required=true
+%test.get.document.authorization.required=false
 
 ## DOCKER
 image.group.default=
