--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ document.folders.sites=${FOLDERS_SITES:documentation;demo}
 document.folders.assets=${FOLDERS_ASSETS:assets;assets}
 document.folders.excluded=${FOLDERS_EXCLUDED:excluded_folder;none}
 document.folders.indexes=${FOLDERS_INDEXES:index.md;index.md}
+document.folders.restricted=${FOLDERS_RESTRICTED:restricted_folder_name;none}
 document.syntax=${SYNTAX:github}
 document.extension.markdown=${MARKDOWN_EXTENSION:.md}
 document.extension.html=${HTML_EXTENSION:.html}
