Refactor DocumentVisitor and ForChangeWatcherIface for improved readability; update application properties formatting and add new settings.json file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ get.document.authorization.required=false
 
 hcms.database.type=${DATABASE_TYPE:h2}
 hcms.loader.type=${LOADER_TYPE:filesystem}
-hcms.watcher.type=${WATCHER_TYPE:filesystem}   
+hcms.watcher.type=${WATCHER_TYPE:filesystem}
 hcms.sevice.url=${HCMS_SERVICE_URL:none;none}
 hcms.file.api=${HCMS_FILE_API:none;none}
 hcms.localization.model=${HCMS_LOCALIZATION_MODEL:path_prefix}
 hcms.translator.type=${HCMS_TRANSLATOR_TYPE:dummy}
 hcms.repository.language.main=${HCMS_REPOSITORY_LANGUAGE_MAIN:en}
 hcms.repository.languages=${HCMS_REPOSITORY_LANGUAGES:pl,en,de}
-deepl.api.key.file=${DEEPL_API_KEY_FILE:none}   
+deepl.api.key.file=${DEEPL_API_KEY_FILE:none}
 deepl.doc.metadata=${DEEPL_DOC_METADATA:title}
 document.folders.root=${FOLDERS_ROOT:documents}
 document.folders.sites=${FOLDERS_SITES:documentation;demo}
@@ -101,3 +101,8 @@ quarkus.smallrye-openapi.api-key-parameter-name=X-app-token
 pl.experiot.hcms.adapters.driven.auth.SignomixAuthClient/mp-rest/url=${AUTH_URL:http://signomix-auth:8080}
 
 # TODO: scheduler
+
+## OPEN TELEMTRY
+#quarkus.otel.exporter.otlp.traces.endpoint=http://jaeger-all-in-one:4317
+##quarkus.otel.exporter.otlp.traces.headers=authorization=Bearer my_secret
+#quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
